Make log gently