@@ -1,7 +1,6 @@
 package io.sitoolkit.cv.app.infra.config;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import lombok.Data;
 
 @Data
@@ -11,6 +10,6 @@ public class ApplicationConfig {
   private String allowedOrigins;
 
   public Path getProjectDir() {
-    return Paths.get(project);
+    return Path.of(project).toAbsolutePath().normalize();
   }
 }
